--- a/src/app/component/head-top/head-top.component.html
+++ b/src/app/component/head-top/head-top.component.html
@@ -32,20 +32,20 @@
                                 aria-expanded="false">
                                 <!-- <i class="fas-solid fa-circle-user"></i> -->
                                 <i class="fas fa-user-circle fa-lg pe-2"></i>
-                                <span> <b>{{userDetails ?userDetails.firstName+userDetails.lastName:"Login"}}</b></span>
+                                <span> <b>{{userDetails ?userDetails.firstName +userDetails.lastName  :"Login"}}</b></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li> -->
-                                <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                <li class="margin-dropdown"><a class="dropdown-item" routerLink=""> <i
                                             class="fas fa-user-alt pe-2"></i>My Profile</a></li>
-                                <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                <li class="margin-dropdown"><a class="dropdown-item" > <i
                                             class="fas  fa-heart pe-2"></i>WishList</a></li>
-                                <li class="margin-dropdown"><a class="dropdown-item" href="#"><i
-                                            class="fas solid fa-box pe-2"></i>Order</a></li>
-                                <li class="margin-dropdown"><a class="dropdown-item" href="#"><i
+                                <li class="margin-dropdown"><a class="dropdown-item" ><i
+                                            class="fas solid fa-box pe-2"></i>MyOrder</a></li>
+                                <li class="margin-dropdown"><a class="dropdown-item" ><i
                                             class="fas solid fa-tag pe-2"></i>Coupons</a></li>
-                                <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                <li class="margin-dropdown"><a class="dropdown-item" > <i
                                             class="fa fa-cog fa-spin"></i>
                                         Settings</a></li>
                                 <li class="margin-dropdown"><a class="dropdown-item " style="cursor: pointer;"
