--- a/src/app/authentication/authenticationComponent/login/login.component.scss
+++ b/src/app/authentication/authenticationComponent/login/login.component.scss
@@ -1,28 +1,38 @@
-body{
-	margin:0;
-	color:#6a6f8c;
-	background:#c8c8c8;
-	font:600 16px/18px 'Open Sans',sans-serif;
-}
+// body{
+// 	margin:0;
+// 	color:#6a6f8c;
+// 	background:#c8c8c8;
+// 	font:600 16px/18px 'Open Sans',sans-serif;
+// }
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display:table}
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
 .login-wrap{
-	width:100%;
+	border-radius: 10px;
+	margin-top: 3rem !important;
+	margin-bottom: 5rem !important;
+	width:30%;
 	margin:auto;
 	max-width:1000px;
-	min-height:670px;
+	min-height:500px;
 	position:relative;
 	// background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+	box-shadow:0 12px 15px 0 rgba(183, 63, 63, 0.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+.center-log-sign{
+// text-align: center;
 }
 .login-html{
 	width:100%;
 	height:100%;
 	position:absolute;
-	padding:90px 70px 50px 70px;
+	padding-left:20px ;
+	padding-top: 20px;
+	padding-right: 20px;
+	padding-bottom: 40px;
+
 	background:rgba(40,57,101,.9);
 }
 .login-html .sign-in-htm,
@@ -32,7 +42,7 @@ a{color:inherit;text-decoration:none}
 	right:0;
 	bottom:0;
 	position:absolute;
-	transform:rotateY(180deg);
+	transform:rotateY(120deg);
 	backface-visibility:hidden;
 	transition:all .4s linear;
 }
@@ -49,8 +59,8 @@ a{color:inherit;text-decoration:none}
 .login-html .tab{
 	font-size:22px;
 	margin-right:15px;
-	padding-bottom:5px;
-	margin:0 15px 10px 0;
+	padding-bottom:0px;
+	margin:0 5px 10px 0;
 	display:inline-block;
 	border-bottom:2px solid transparent;
 }
@@ -60,7 +70,7 @@ a{color:inherit;text-decoration:none}
 	border-color:#1161ee;
 }
 .login-form{
-	min-height:345px;
+	min-height:35px;
 	position:relative;
 	perspective:1000px;
 	transform-style:preserve-3d;
@@ -78,17 +88,17 @@ a{color:inherit;text-decoration:none}
 .login-form .group .input,
 .login-form .group .button{
 	border:none;
-	padding:15px 20px;
+	padding:5px 20px;
 	border-radius:25px;
-	background:rgba(255,255,255,.1);
+	background:rgba(250, 106, 10, 0.608);
 }
 .login-form .group input[data-type="password"]{
 	text-security:circle;
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
-	font-size:12px;
+	color:#000000;
+	font-size:14px;
 }
 .login-form .group .button{
 	background:#1161ee;
@@ -148,3 +158,9 @@ a{color:inherit;text-decoration:none}
 .foot-lnk{
 	text-align:center;
 }
+// .login-form .login-page-center{
+// 	margin-top: 3rem;
+// }
+// .login-form .signup-page-center{
+// 	margin-top: 0px;
+// }
