--- a/src/app/shop/shop-component/viewcart/viewcart.component.html
+++ b/src/app/shop/shop-component/viewcart/viewcart.component.html
@@ -101,7 +101,8 @@
               </div>
   
               <div class="mt-3">
-                <a [routerLink]="'/checkout'" class="btn btn-success w-100 shadow-0 mb-2"> Place Order</a>
+                <!-- <a [routerLink]="'/checkout'" class="btn btn-success w-100 shadow-0 mb-2"> Place Order</a> -->
+                <a (click)="redirectToPage()" class="btn btn-success w-100 shadow-0 mb-2"> Place Order</a>
                 <a [routerLink]="'/'" class="btn btn-light w-100 border mt-2"> Back to shop </a>
               </div>
             </div>
