--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -1,5 +1,4 @@
 <ngx-ui-loader></ngx-ui-loader>
-
 <div class="card-top container-fluid ">
     <div class="container-fluid d-flex">
         <div class="item">
@@ -35,6 +34,11 @@
 
 <app-set-slider></app-set-slider>
 <div class="container" ngxUiLoaderBlurred>
+    <!-- <div class="row">
+        <div class="head-section text-center">
+            <h1 class="banner-text" *ngIf="banner">Welcome To The Demo</h1>
+        </div>
+    </div> -->
     <div class="row">
         <div class="col-md-1">
             <!-- <h2>hello</h2> -->
