--- a/src/app/component/set-slider/set-slider.component.scss
+++ b/src/app/component/set-slider/set-slider.component.scss
@@ -15,3 +15,6 @@ img {
   #carouselExampleIndicators{
     // position: fixed;
   }
+  .carousel-inner .carousel-item {
+    transition-duration: 2s; /* Adjust the duration as needed */
+  }
