--- a/src/app/component/head-top/head-top.component.html
+++ b/src/app/component/head-top/head-top.component.html
@@ -25,8 +25,6 @@
             <div class="row">
                 <div class="col-8">
                     <ul class="drop-brand">
-
-
                         <li class="nav-item dropdown" *ngIf="userDetails; else elseblock">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -37,8 +35,8 @@
                             <ul class="dropdown-menu">
                                 <!-- <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li> -->
-                                <li class="margin-dropdown"><a class="dropdown-item" routerLink=""> <i
-                                            class="fas fa-user-alt pe-2"></i>My Profile</a></li>
+                                <li class="margin-dropdown"><a class="dropdown-item " routerLink="profile"> <i
+                                            class="fas fa-user-alt pe-2 "></i>My Profile</a></li>
                                 <li class="margin-dropdown"><a class="dropdown-item" > <i
                                             class="fas  fa-heart pe-2"></i>WishList</a></li>
                                 <li class="margin-dropdown"><a class="dropdown-item" ><i
