--- a/src/app/component/product/product.component.scss
+++ b/src/app/component/product/product.component.scss
@@ -364,3 +364,14 @@ section {
   background-color: #f0f0f0; /* Placeholder color */
   margin-bottom: 5px;
 }
+
+
+.head-section {
+  width: 100%;
+  height: 120px;
+  background-color: rgb(182, 183, 250);
+}
+.banner-text {
+  color: #ffffff;
+  margin: 30px auto;
+}
