--- a/src/app/authentication/authenticationComponent/login/login.component.scss
+++ b/src/app/authentication/authenticationComponent/login/login.component.scss
@@ -11,12 +11,12 @@ a{color:inherit;text-decoration:none}
 
 .login-wrap{
 	border-radius: 10px;
-	margin-top: 3rem !important;
+	margin-top: 2rem !important;
 	margin-bottom: 5rem !important;
 	width:30%;
 	margin:auto;
 	max-width:1000px;
-	min-height:500px;
+	min-height:600px;
 	position:relative;
 	// background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(183, 63, 63, 0.24),0 17px 50px 0 rgba(0,0,0,.19);
@@ -164,3 +164,6 @@ a{color:inherit;text-decoration:none}
 // .login-form .signup-page-center{
 // 	margin-top: 0px;
 // }
+.inline{
+	display: inline-block;
+}
