--- a/src/app/component/set-horz-slider/set-horz-slider.component.scss
+++ b/src/app/component/set-horz-slider/set-horz-slider.component.scss
@@ -1,42 +1,22 @@
-#carouselExampleVertical img{
-    max-height: 500px !important;
-    min-width: 10%;
-    max-width: 10%;
-    object-fit: cover;
-    object-position: center;
-    box-sizing: border-box;
+#carouselExampleDark.carousel {
+  height: 500px; /* Set height of the carousel */
 }
 
-#verticalCarousel .carousel-inner {
-    display: flex;
-    flex-direction: column;
-    height: 100%; /* Ensure the carousel takes up full height */
-  }
-  
-  #verticalCarousel .carousel-item {
-    transition: transform 0.6s ease; /* Add smooth transition effect */
-    transform: rotate(-90deg) translateX(-100%);
-  }
-  
-  #verticalCarousel .carousel-item img {
-    width: auto;
-    height: 100%; /* Ensure the image takes up full height */
-    object-fit: cover; /* Maintain aspect ratio */
-  }
-  
-  #verticalCarousel .carousel-item.active {
-    transform: rotate(0);
-  }
+#carouselExampleDark .carousel-inner {
+  height: auto; /* Allow inner content to overflow */
+  display: flex;
+  flex-direction: column;
+}
 
-  .coustm{
-    margin-left: -140px ;
-    height: 30rem;
-    width: 20rem !important;
-    position: fixed; 
-    // top: 100px;
-    transition: top 0.10s ease;
-  }
+#carouselExampleDark .carousel-item {
+  width: 100%; /* Ensure full width */
+}
 
-//   position: relative;
-//   z-index: 1000;
-//   background-color: rgba(236, 148, 60, 0.8); /* Adjust as needed */
+#carouselExampleDark .carousel-item img {
+  width: 100%; /* Set width of images */
+  height: auto; /* Maintain aspect ratio */
+}
+.rotated {
+  transform: rotateY(90deg);
+  background-color: pink;
+}
