--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
 @import '~bootstrap/scss/bootstrap';
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 *{
     padding: 0%;
     
